WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130257
Fix crash when resizing the visited link table
https://bugs.webkit.org/show_bug.cgi?id=130257
Summary
Fix crash when resizing the visited link table
Anders Carlsson
Reported
2014-03-14 12:46:42 PDT
Fix crash when resizing the visited link table
Attachments
Patch
(1.58 KB, patch)
2014-03-14 12:47 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-03-14 12:47:23 PDT
Created
attachment 226752
[details]
Patch
Anders Carlsson
Comment 2
2014-03-14 13:10:38 PDT
Committed
r165639
: <
http://trac.webkit.org/changeset/165639
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug