Fix crash when resizing the visited link table https://bugs.webkit.org/show_bug.cgi?id=130257 <rdar://problem/16328177>

Reviewed by Dan Bernstein.

We're iterating over the old table, so use currentTableSize in the loop termination condition.

* UIProcess/VisitedLinkProvider.cpp:
(WebKit::VisitedLinkProvider::resizeTable):

Canonical link: https://commits.webkit.org/148228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165639 268f45cc-cd09-0410-ab3c-d52691b4dbfc